Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.5.5 (unreleased) [beta]

* Version 1.5.4 (released 2010-11-14) [beta]

** Update gnulib files.

* Version 1.5.3 (released 2010-11-14) [beta]

** gsasl: Support for TLS channel bindings.
Requires GnuTLS 2.11.4 or later for the gnutls_session_channel_binding
function.  Used by the SCRAM-SHA-1-PLUS mechanism.

** doc: Mention new property GSASL_CB_TLS_UNIQUE and SCRAM-SHA-1-PLUS.

** tests: Added self-tests for SCRAM-SHA-1-PLUS.

* Version 1.5.2 (released 2010-09-27) [beta]

** gsasl: Avoid fixed size buffers.
This caused problems on Windows where the BUFSIZ was too small for
some line lengths with GS2-KRB5.

** tests: Fix error strings to be more unique.

** doc: Added section on how to build with MIT Kerberos for Windows.

** doc: Added PDF version of API reference manual.
See doc/reference/gsasl.pdf.

** i18n: Updated translations.
Thanks to Benno Schulenberg.

** Update gnulib files.

* Version 1.5.1 (released 2010-04-21) [beta]

** Update gnulib files.

* Version 1.5.0 (released 2010-03-31) [beta]

** doc: Explain GS2-related changes.

** doc: GTK-DOC manual improved.
Now almost all symbols and types are explained.

** gsasl: Fix crash when getaddrinfo does not get a canonical name.

** gsasl: Improve error message when server rejects authentication.

** tests: Self checks are improved.

* Version 1.4.4 (released 2010-03-25) [stable]

** See lib/NEWS.

* Version 1.4.3 (released 2010-03-25) [stable]

** See lib/NEWS.

* Version 1.4.2 (released 2010-03-15) [stable]

** i18n: Updated translations.

* Version 1.4.1 (released 2010-02-16) [stable]

** gsasl: Improve application data throughput.