@@ -2302,6 +2302,7 @@ terminal.
                                   STARTTLS when available.  (default=off)
       --no-starttls             Unconditionally disable STARTTLS.
                                   (default=off)
+      --no-cb                   Don't set any channel bindings.  (default=off)
       --x509-ca-file=FILE       File containing one or more X.509 Certificate
                                   Authorities certificates in PEM format, used
                                   to verify the certificate received from the
