@@ -1,4 +1,4 @@
-# Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008, 2009 Simon Josefsson
+# Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008, 2009, 2010 Simon Josefsson
 #
 # This file is part of GNU SASL.
 #
@@ -53,6 +53,7 @@ option "quality-of-protection" - "How application payload will be protected. 'qo
 section "STARTTLS options"
 option "starttls" - "Force use of STARTTLS.  The default is to use STARTTLS when available." flag off
 option "no-starttls" - "Unconditionally disable STARTTLS." flag off
+option "no-cb" - "Don't use channel bindings from TLS." flag off
 option "x509-ca-file" - "File containing one or more X.509 Certificate Authorities certificates in PEM format, used to verify the certificate received from the server.  If not specified, no verification of the remote server certificate will be done." string typestr="FILE" no
 option "x509-cert-file" - "File containing client X.509 certificate in PEM format.  Used together with --x509-key-file to specify the certificate/key pair." string typestr="FILE" no
 option "x509-key-file" - "Private key for the client X.509 certificate in PEM format.  Used together with --x509-key-file to specify the certificate/key pair." string typestr="FILE" no
